syntax = "proto3";
package duo;

service UserManager {
    rpc AddUser (UserInfoRequest) returns (SuccessStatusResponse);
    rpc GetUser (Credentials) returns (UserDetails);
    rpc IsUsernameAvailable (UsernameRequest) returns (BooleanResponse);
    rpc IsEmailAvailable (EmailRequest) returns (BooleanResponse);
}

service FriendManager {

}

service BlockManager {

}

message UserInfoRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message SuccessStatusResponse {
    bool success = 1;
}

message Credentials {
    string username = 1;
    string password = 2;
}

message UserDetails {
    int32 id = 1;
    string username = 2;
    string email = 3;
    int32 total_wins = 4;
    int32 picture_id = 5;
}

message UsernameRequest {
    string username = 1;
}

message BooleanResponse {
    bool response = 1;
}

message EmailRequest {
    string email = 1;
}